chore(SimpleRTP): change color scheme of messages